Fix sidebar search svg icon being cut off

--- a/ui/src/Components/Sidebar/Search.scss
+++ b/ui/src/Components/Sidebar/Search.scss
@@ -29,6 +29,11 @@
     &::placeholder {
       color: #aaa;
     }
+
+  }
+
+  svg {
+    overflow: visible;
   }
 
   button {
